# pg2ch_cdc

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/rules/: architecture.md  development.md  diff-research.md  initial-load-consistency.md  source-files.md
.githooks/: pre-commit
.github/workflows/: ci.yml
diffs/: cstat.yaml
src/: cdc.rs  clickhouse.rs  config.rs  lib.rs  main.rs  orchestrator.rs  pg.rs  pgoutput.rs  types.rs
tests/: test_basic_replication.sh  test_concurrent_dml_during_load.sh  test_delete_noncontiguous_pk.sh  test_pk_update.sh
